--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> likely to die off</title>
+    <title> most likely to die off</title>
   </head>
   <body>
     <p style="color:purple; font-size:100px;">To Tested_INC.</p>
